<resources>
    <string name="app_name">login</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="unregister">注销</string>
    <string name="input_account">请输入您的用户名</string>
    <string name="input_pwd">请输入您的密码</string>
    <string name="confirm_pwd">请确认您的密码</string>
</resources>