<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:background="@drawable/img_login_header"
        android:layout_marginTop="@dimen/margin_size_100"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_size_50"
        android:layout_marginTop="@dimen/margin_size_20"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/img_login_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_size_10"
            android:textStyle="bold"
            android:textSize="@dimen/margin_size_20"
            android:text="@string/account"/>

        <EditText
            android:id="@+id/et_activity_login_account"
            android:text="@string/input_account"
            android:textSize="@dimen/margin_size_20"
            android:textStyle="bold"
            android:layout_width="@dimen/view_size_200"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_size_10"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_size_50"
        android:layout_marginTop="@dimen/margin_size_20"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/img_login_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_size_10"
            android:textStyle="bold"
            android:textSize="@dimen/margin_size_20"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/et_activity_login_pwd"
            android:text="@string/input_account"
            android:textSize="@dimen/margin_size_20"
            android:textStyle="bold"
            android:layout_width="@dimen/view_size_200"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_size_10"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_activity_login_login"
        android:text="@string/login"
        android:layout_marginTop="@dimen/margin_size_20"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/view_size_300"
        android:layout_height="@dimen/view_size_50"/>

    <Button
        android:id="@+id/btn_activity_login_register"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/view_size_300"
        android:layout_height="@dimen/view_size_50"/>

    <Button
        android:id="@+id/btn_activity_login_unregister"
        android:text="@string/unregister"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/view_size_300"
        android:layout_height="@dimen/view_size_50"/>



</LinearLayout>