<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_size_50"
        android:layout_marginTop="@dimen/margin_size_20">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/img_login_header"/>

        <EditText
            android:id="@+id/et_activity_register_account"
            android:text="@string/input_account"
            android:textSize="@dimen/margin_size_20"
            android:textStyle="bold"
            android:layout_width="@dimen/view_size_200"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_size_10"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_size_50"
        android:layout_marginTop="@dimen/margin_size_20">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/img_login_header"/>

        <EditText
            android:id="@+id/et_activity_register_pwd"
            android:text="@string/input_pwd"
            android:textSize="@dimen/margin_size_20"
            android:textStyle="bold"
            android:layout_width="@dimen/view_size_200"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_size_10"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_size_50"
        android:layout_marginTop="@dimen/margin_size_20">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/img_login_header"/>

        <EditText
            android:id="@+id/et_activity_register_pwd_confirm"
            android:text="@string/confirm_pwd"
            android:textSize="@dimen/margin_size_20"
            android:textStyle="bold"
            android:layout_width="@dimen/view_size_200"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_size_10"/>
    </LinearLayout>
</LinearLayout>